@@ -1,4 +1,10 @@
-/* Copyright (C) 1997 Free Software Foundation, Inc.
+/*
+ * File taken from glibc 2.16.
+ * Following changes were made:
+ *  - None.
+ */
+
+/* Copyright (C) 1997, 2012 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -12,12 +18,13 @@
    Lesser General Public License for more details.
 
    You should have received a copy of the GNU Lesser General Public
-   License along with the GNU C Library; if not, write to the Free
-   Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
-   02111-1307 USA.  */
+   License along with the GNU C Library; if not, see
+   <http://www.gnu.org/licenses/>.  */
 
-#ifndef __BYTESWAP_H
-#define __BYTESWAP_H	1
+#ifndef _BYTESWAP_H
+#define _BYTESWAP_H	1
+
+#include <features.h>
 
 /* Get the machine specific, optimized definitions.  */
 #include <bits/byteswap.h>
@@ -32,7 +39,7 @@
 /* Return a value with all bytes in the 32 bit argument swapped.  */
 #define bswap_32(x) __bswap_32 (x)
 
-#if defined __GNUC__ && __GNUC__ >= 2
+#if __GLIBC_HAVE_LONG_LONG
 /* Return a value with all bytes in the 64 bit argument swapped.  */
 # define bswap_64(x) __bswap_64 (x)
 #endif
